[package]
description = "Bindings to LLVM's C API"
repository = "https://gitlab.com/taricorp/llvm-sys.rs"
readme = "README.md"
license = "MIT"
keywords = ["bindings", "llvm"]
categories = ["external-ffi-bindings"]
links = "llvm"
name = "llvm-sys"
version = "100.0.1"
authors = [
  "Peter Marheine <peter@taricorp.net>",
]
build = "build.rs"

[badges]
gitlab = { repository = "taricorp/llvm-sys.rs" }
maintenance = { status = "passively-maintained" }

[features]
# Require that the used version of LLVM exactly match that expected by this
# crate.
strict-versioning = []

# Do not attempt to link against LLVM libraries (useful if a different crate
# in your dependency tree provides them instead).
no-llvm-linking = []

# Do not attempt to build the LLVM_InitializeAllTarget* functions. Useful if
# the build host doesn't have a copy of LLVM to compile/link against and you do
# not use any of those functions.
disable-alltargets-init = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
lazy_static = "1.0"
regex = "1.0"
semver = "0.9"
